# recollect

client/: package-lock.json  package.json
client/android/app/src/main/: AndroidManifest.xml
client/android/app/src/main/java/com/client/: MainApplication.kt
client/src/: App.tsx  axios.tsx
client/src/components/: HomeCamera.tsx  HomeCameraButton.tsx  HomeCameraButtonSVG.tsx  LoginBackgroundSVG.tsx  NoCameraDeviceError.tsx  WrapListFriendBackground.tsx  WrapListTitleBackground.tsx
client/src/screens/: Home.tsx  Login.tsx
client/src/screens/Wrap/: Wrap.tsx  WrapList.tsx  WrapListFriend.tsx  WrapListTitle.tsx
client/src/types/: navigation.tsx
client/src/utils/: savePhotoToCameraRoll.ts
server/: .gitignore  face_encodings.pkl  face_names.pkl  package-lock.json  package.json  pyproject.toml
server/scripts/: face.py  preprocess.py  train.py
server/src/: app.js  db.js  router.js
server/src/utils/: callPythonScript.js  getDateTimeString.js
